[package]
name = "agent-parser-ro"
version = "0.1.1"
edition = "2024"
description = "A comprehensive user agent string parser that detects browser, operating system, and device type"
license = "MIT OR Apache-2.0"
authors = ["Kak Smko <ba.smko@example.com>"]
repository = "https://github.com/kak-smko/agent-parser-ro"
documentation = "https://docs.rs/agent-parser-ro"
readme = "README.md"
keywords = ["user-agent", "parser", "user-agent-parser"]
categories = ["parser-implementations", "web-programming"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
lazy_static = "1.4"
regex = "1.10"
serde = { version = "1.0.219", features = ["derive"] }